Finaliza a primeira versão do css

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,12 +6,17 @@
   font-family: 'Roboto', sans-serif;
 }
 
+body {
+  background-color: #F5F5F5;
+}
+
 .content-container {
   background-color: #F5F5F5;
 }
 
 main {
   margin: 0px auto;
-  padding: 0.5em 0.3em;
+  padding: 1em 0.3em;
+  height: 100vh;
   width: 98vw;
 }
