--- a/src/styles/AddRobotSection.css
+++ b/src/styles/AddRobotSection.css
@@ -3,12 +3,53 @@
 }
 
 .addRobotBtn {
-  background-color: #FFFFFF;
+  background: #FFFFFF;
   border: 1px solid #E3E2E3;
-  padding: 1.5em;
+  box-sizing: border-box;
+  border-radius: 4px;
+  height: 5em;
+  width: 5em;
 }
 
 .addRobotBtn:hover {
   border: 1px solid #00B39D;
+  transform: scale(120%);
   transition: all 0.5s;
+}
+
+.addRobotBtn[disabled]:hover {
+  border: 1px solid #E3E2E3;
+  transform: inherit;
+}
+
+.add-button-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 1.5em 0em 1.5em 2em;
+}
+
+.add-robot-section {
+  background: #FFFFFF;
+  box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.097543);
+  border-radius: 4px;
+  margin-top: 1em;
+}
+
+.add-robot-title {
+  color: #343234;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1em;
+}
+
+.disponible-robots {
+  color: #888689;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.8em;
+}
+
+.add-robot-infos-container {
+  margin-left: 1em;
 }
