--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -6,6 +6,12 @@
   font-family: 'Roboto', sans-serif;
 }
 
+@media screen and (max-width: 600px) {
+  main {
+    overflow: hidden;
+  }
+}
+
 body {
   background-color: #F5F5F5;
 }
@@ -16,7 +22,9 @@ body {
 
 main {
   margin: 0px auto;
-  padding: 1em 0.3em;
+  padding: 0.7em;
   height: 100vh;
   width: 98vw;
 }
+
+
